# Praetor_Desk

./: .gitignore  BUILD_FIX_PLAN.md  BUILD_ISSUES_ANALYSIS.md  CURSOR_SETUP.md  FINAL_BUILD_FIX_PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  oauth.rs
src-tauri/src/commands/: airdrops.rs  calendar.rs  house.rs  ideas.rs  mod.rs  projects.rs  research.rs
src-tauri/src/models/: airdrop.rs  house.rs  idea.rs  mod.rs  oauth_token.rs  project.rs
src/api/: airdrops.ts  calendar.ts  house.ts  ideas.ts  projects.ts  research.ts
src/components/: TauriWarning.tsx
src/components/airdrop/: AirdropCard.tsx  NewAirdropModal.tsx
src/components/layout/: PageHeader.tsx  Sidebar.tsx
src/components/ui/: Card.tsx  ChainBadge.tsx  PriorityChip.tsx  StatusPill.tsx  Tooltip.tsx
src/tabs/: AirdropsTab.tsx  BrainstormTab.tsx  CalendarTab.tsx  HouseTab.tsx  IdeasTab.tsx  ProjectsTab.tsx
src/utils/: tauri-check.ts
