[package]
name = "praetor-desk"
version = "0.1.0"
description = "Praetor Desk - ADHD workbench desktop app"
authors = ["Praetor Desk Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-http = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "5.0"
rand = "0.8"
url = "2.5"
base64 = "0.21"
home = "0.5.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

